RESOLVED FIXED231434
REGRESSION(r283802): broke Apple ports
https://bugs.webkit.org/show_bug.cgi?id=231434
Summary REGRESSION(r283802): broke Apple ports
WebKit Commit Bot
Reported 2021-10-08 08:57:29 PDT
https://commits.webkit.org/r283802 introduced a regression: broke Apple ports This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of r283802 (10.48 KB, patch)
2021-10-08 08:57 PDT, WebKit Commit Bot
no flags
Patch (1.42 KB, patch)
2021-10-08 09:02 PDT, Michael Catanzaro
no flags
WebKit Commit Bot
Comment 1 2021-10-08 08:57:36 PDT
Created attachment 440622 [details] REVERT of r283802 Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
Michael Catanzaro
Comment 2 2021-10-08 08:59:00 PDT
Actually let's revert only the change to TextChecker. The whole patch doesn't need to be reverted.
Michael Catanzaro
Comment 3 2021-10-08 09:02:59 PDT
EWS
Comment 4 2021-10-08 09:38:12 PDT
Committed r283809 (242702@main): <https://commits.webkit.org/242702@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 440626 [details].
Radar WebKit Bug Importer
Comment 5 2021-10-08 09:39:15 PDT
Note You need to log in before you can comment on or make changes to this bug.