REGRESSION(r283802): broke Apple ports https://bugs.webkit.org/show_bug.cgi?id=231434

Unreviewed, revert changes to TextChecker.h that broke the iOS build.

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-10-08

* UIProcess/TextChecker.h:

Canonical link: https://commits.webkit.org/242702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283809 268f45cc-cd09-0410-ab3c-d52691b4dbfc